--- a/css/base.css
+++ b/css/base.css
@@ -1,25 +1,4 @@
-/**
- * =================================================================== 
- *
- *  Kards v1.0 Base Stylesheet
- *  url: styleshout.com
- *  03-01-2016
- *  ------------------------------------------------------------------
- *  TOC:
- *  01. reset
- *  02. basic/base setup styles
- *  03. grid
- *  04. MISC
- *
- * =================================================================== 
- */
 
-/** 
- * ===================================================================
- * 01. reset - normalize.css v3.0.2 | MIT License | git.io/normalize
- *
- * ------------------------------------------------------------------- 
- */
 html {
 	font-family: sans-serif;
 	-ms-text-size-adjust: 100%;
@@ -361,10 +340,7 @@ a img {
 	border: none;
 }
 
-/**
- * inputs - (_basic.scss)
- * ------------------------------------------------------------------- 
- */
+
 fieldset {
 	margin: 0;
 	padding: 0;
@@ -385,12 +361,7 @@ textarea {
 	appearance: none;
 }
 
-/** 
- * ===================================================================
- * 03. grid - (_grid.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 .row {
 	width: 94%;
 	max-width: 1140px;
@@ -483,10 +454,7 @@ textarea {
 	width: 100%;
 }
 
-/**
- * small screens - (_grid.scss)
- * --------------------------------------------------------------- 
- */
+
 @media screen and (max-width:1024px) {
 	.row .row {
 		margin-left: -18px;
@@ -499,10 +467,7 @@ textarea {
 
 }
 
-/**
- * tablets - (_grid.scss)
- * --------------------------------------------------------------- 
- */
+
 @media screen and (max-width:768px) {
 	.row {
 		width: auto;
@@ -547,10 +512,7 @@ textarea {
 
 }
 
-/**
- * large mobile devices - (_grid.scss)
- * --------------------------------------------------------------- 
- */
+
 @media screen and (max-width:600px) {
 	.row {
 		padding-left: 25px;
@@ -584,10 +546,7 @@ textarea {
 
 }
 
-/**
- * small mobile devices - (_grid.scss)
- * --------------------------------------------------------------- 
- */
+
 @media screen and (max-width:400px) {
 	.row .row {
 		padding-left: 0;
@@ -611,12 +570,7 @@ textarea {
 
 }
 
-/** 
- * ===================================================================
- * block grids - (_grid.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 [class*="block-"]:before,
 [class*="block-"]:after {
 	content: "";
@@ -644,8 +598,8 @@ textarea {
 }
 
 /**
- * Clearing for block grid columns. Allow columns with 
- * different heights to align properly.
+ * clearing for block grid columns. allow columns with 
+ * different heights to align properly
  */
 .block-1-6 .bgrid:nth-child(6n+1),
 .block-1-4 .bgrid:nth-child(4n+1),
@@ -654,10 +608,7 @@ textarea {
 	clear: both;
 }
 
-/**
- * small screens - (_grid.scss)
- * --------------------------------------------------------------- 
- */
+
 @media screen and (max-width:1024px) {
 	.block-s-1-6 .bgrid {
 		width: 16.66667%;
@@ -693,10 +644,7 @@ textarea {
 
 }
 
-/**
- * tablets - (_grid.scss)
- * --------------------------------------------------------------- 
- */
+
 @media screen and (max-width:768px) {
 	.block-tab-1-6 .bgrid {
 		width: 16.66667%;
@@ -732,10 +680,7 @@ textarea {
 
 }
 
-/**
- * large mobile devices - (_grid.scss)
- * --------------------------------------------------------------- 
- */
+
 @media screen and (max-width:600px) {
 	.block-mob-1-6 .bgrid {
 		width: 16.66667%;
@@ -786,16 +731,9 @@ textarea {
 
 }
 
-/** 
- * ===================================================================
- * 04. MISC  - (_grid.scss)
- *
- * ------------------------------------------------------------------- 
- */
 
-/**
- * Clearing - (http://nicolasgallagher.com/micro-clearfix-hack/
- */
+
+
 .group:before,
 .group:after {
 	content: "";
@@ -806,9 +744,7 @@ textarea {
 	clear: both;
 }
 
-/**
- * Misc Helper Styles 
- */
+
 .hide {
 	display: none;
 }
@@ -867,5 +803,3 @@ textarea {
 	margin-right: auto;
 	text-align: center;
 }
-
-/*# sourceMappingURL=base.css.map */
