--- a/css/main.css
+++ b/css/main.css
@@ -1,51 +1,13 @@
-/**
- * =================================================================== 
- *
- *  Kards v1.0 Main Stylesheet
- *  url: styleshout.com
- *  03-01-2016
- *  ------------------------------------------------------------------
- *  TOC:
- *  01. webfonts and iconfonts
- *  02. base style overrides
- *  03. typography & general theme styles
- *  04. preloader
- *  05. forms
- *  06. buttons 
- *  07. other components
- *  08. common styles
- *  09. header styles
- *  10. intro
- *  11. about
- *  12. resume
- *  13. portfolio
- *  14. call-to-action section
- *  15. services
- *  16. stats
- *  17. contact
- *  18. footer
- *
- * =================================================================== 
- */
+/*
 
+Julian Manaois
 
-/** 
- * ===================================================================
- * 01. webfonts and iconfonts - (_document-setup.scss)
- *
- * ------------------------------------------------------------------- 
- */
+*/
+
 @import url("fonts.css");
 @import url("font-awesome/css/font-awesome.min.css");
 @import url("micons/micons.css");
 
-
-/** 
- * ===================================================================
- * 02. base style overrides - (_document-setup.scss)
- *
- * ------------------------------------------------------------------- 
- */
 html {
 	font-size: 10px;
 }
@@ -77,10 +39,6 @@ body {
 	color: #6e6e6e;
 }
 
-/**
- * links - (_document-setup.scss)
- * -------------------------------------------------------------------
- */
 a, a:visited {
 	color: #000000;
 	-moz-transition: all 0.3s ease-in-out;
@@ -94,12 +52,6 @@ a:hover, a:focus, a:active {
 	outline: 0;
 }
 
-/** 
- * ===================================================================
- * 03. typography & general theme styles - (_document-setup.scss)
- *
- * ------------------------------------------------------------------- 
- */
 h1, h2, h3, h4, h5, h6, .h01, .h02, .h03, .h04, .h05, .h06 {
 	font-family: "poppins-semibold", sans-serif;
 	color: #313131;
@@ -267,10 +219,7 @@ hr {
 	height: 0;
 }
 
-/**
- * Lists - (_document-setup.scss)  
- * -------------------------------------------------------------------
- */
+
 ol {
 	list-style: decimal;
 }
@@ -315,10 +264,7 @@ dd {
 	margin: 0 0 0 2rem;
 }
 
-/**
- * tables - (_document-setup.scss)  
- * -------------------------------------------------------------------
- */
+
 table {
 	border-width: 0;
 	width: 100%;
@@ -348,10 +294,6 @@ th:last-child, td:last-child {
 	-webkit-overflow-scrolling: touch;
 }
 
-/**
- * Spacing - (_document-setup.scss)  
- * -------------------------------------------------------------------
- */
 button, .button {
 	margin-bottom: 1.2;
 }
@@ -375,10 +317,7 @@ form,
 	margin-bottom: 3rem;
 }
 
-/**
- * floated image - (_document-setup.scss)  
- * -------------------------------------------------------------------
- */
+
 img.pull-right {
 	margin: .9rem 0 0 2.4rem;
 }
@@ -386,10 +325,7 @@ img.pull-left {
 	margin: .9rem 2.4rem 0 0;
 }
 
-/**
- * block grid paddings - (_document-setup.scss) 
- * -------------------------------------------------------------------
- */
+
 .bgrid {
 	padding: 0 20px;
 }
@@ -414,10 +350,7 @@ img.pull-left {
 	}
 }
 
-/**
- * pace.js styles - minimal  - (_document-setup.scss)
- * -------------------------------------------------------------------
- */
+
 .pace {
 	-webkit-pointer-events: none;
 	pointer-events: none;
@@ -438,12 +371,7 @@ img.pull-left {
 	height: 6px;
 }
 
-/** 
- * ===================================================================
- * 04. preloader - (_preloader-1.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 #preloader {
 	position: fixed;
 	top: 0;
@@ -501,12 +429,7 @@ img.pull-left {
 	}
 }
 
-/** 
- * ===================================================================
- * 05. forms - (_forms.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 fieldset {
 	border: none;
 }
@@ -619,10 +542,7 @@ label > input[type="checkbox"], label > input[type="radio"] {
 	top: .15rem;
 }
 
-/**
- * Style Placeholder Text  
- * -
- */
+
 ::-webkit-input-placeholder {
 	color: #a1a1a1;
 }
@@ -639,12 +559,7 @@ label > input[type="checkbox"], label > input[type="radio"] {
 	color: #a1a1a1 !important;
 }
 
-/** 
- * ===================================================================
- * 06. buttons - (_button-essentials.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 .button,
 a.button,
 button,
@@ -745,17 +660,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 
-/** 
- * ===================================================================
- * 07. other components - (_others.scss)
- *
- * ------------------------------------------------------------------- 
- */
 
-/**
- * alert box - (_alert-box.scss)
- * -------------------------------------------------------------------
- */
 .alert-box {
 	padding: 2.1rem 4rem 2.1rem 3rem;
 	position: relative;
@@ -787,14 +692,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: #bba31b;
 }
 
-/**
- * additional typo styles - (_additional-typo.scss)
- * -------------------------------------------------------------------
- */
 
-/**
- * drop cap 
- */
 .drop-cap:first-letter {
 	float: left;
 	margin: 0;
@@ -829,9 +727,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	margin-left: -0.2em;
 }
 
-/**
- * dictionary definition style
- */
+
 .dictionary-style dt {
 	display: inline;
 	counter-reset: definitions;
@@ -848,19 +744,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	content: counter(definitions, decimal) ". ";
 }
 
-/** 
- * Pull Quotes
- * -----------
- * markup:
- *
- * <aside class="pull-quote">
- *		<blockquote>
- *			<p></p>
- *		</blockquote>
- *	</aside>
- *
- * --------------------------------------------------------------------- 
- */
+
 .pull-quote {
 	position: relative;
 	padding: 2.1rem 3rem 2.1rem 0px;
@@ -889,19 +773,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	content: none;
 }
 
-/** 
- * Stats Tab
- * ---------
- * markup:
- *
- * <ul class="stats-tabs">
- *		<li><a href="#">[value]<em>[name]</em></a></li>
- *	</ul>
- *
- * Extend this object into your markup.
- *
- * ---------------------------------------------------------------------
- */
+
 .stats-tabs {
 	padding: 0;
 	margin: 3rem 0;
@@ -935,10 +807,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: #888888;
 }
 
-/**
- * skillbars - (_skillbars.scss)
- * -------------------------------------------------------------------
- */
+
 .skill-bars {
 	list-style: none;
 	margin: 6rem 0 3rem;
@@ -1013,12 +882,6 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .skill-bars li .percent100 { width: 100%; }
 
 
-/** 
- * ===================================================================
- * 08. common styles (_layout.scss)
- *
- * ------------------------------------------------------------------- 
- */
 .grey-section {
 	background: #ebebeb;
 }
@@ -1048,11 +911,6 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	letter-spacing: .4rem;
 }
 
-/**
- * responsive:
- * common styles
- * ------------------------------------------------------------------- 
- */
 @media only screen and (max-width:768px) {
 	.section-intro {
 		max-width: 650px;
@@ -1077,12 +935,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 
-/** 
- * ===================================================================
- * 09. header styles - (_layout.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 header {
 	position: fixed;
 	width: 100%;
@@ -1123,10 +976,7 @@ header .logo a {
 	background-size: 92px 15px;
 }
 
-/**
- * menu toggle - (_layout.css)
- * ------------------------------------------------------------------- 
- */
+
 .menu-toggle {
 	float: left;
 	width: 40px;
@@ -1260,11 +1110,7 @@ header .logo a {
 	color: #FF0077;
 }
 
-/**
- * responsive:
- * header styles
- * --------------------------------------------------------------- 
- */
+
 @media only screen and (max-width:1024px) {
 	header .top-bar {
 		left: 60px;
@@ -1287,12 +1133,6 @@ header .logo a {
 }
 
 
-/** 
- * ===================================================================
- * 10. intro - (_layout.scss) 
- *
- * ------------------------------------------------------------------- 
- */
 #intro {
 	background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom;
 	-webkit-background-size: cover;
@@ -1419,11 +1259,7 @@ header .logo a {
 	color: #cc005f;
 }
 
-/**
- * responsive:
- * Intro
- * --------------------------------------------------------------- 
- */
+
 @media only screen and (max-width:1024px) {
 	.intro-content h1 {
 		font-size: 7.6rem;
@@ -1483,12 +1319,7 @@ header .logo a {
 }
 
 
-/** 
- * ===================================================================
- * 11. about - (_layout.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 #about {
 	background: #FFFFFF;
 	padding-top: 12rem;
@@ -1564,11 +1395,7 @@ header .logo a {
 	margin-right: 4rem;
 }
 
-/**
- * responsive:
- * about
- * ------------------------------------------------------------------- 
- */
+
 @media only screen and (max-width:1024px) {
 	.intro-info {
 		margin-right: 0;
@@ -1614,12 +1441,7 @@ header .logo a {
 	}
 }
 
-/** 
- * ===================================================================
- * 12. resume - (_layout.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 #resume {
 	padding-top: 12rem;
 	padding-bottom: 12rem;
@@ -1706,11 +1528,7 @@ header .logo a {
 	bottom: 0;
 }
 
-/**
- * responsive:
- * resume
- * ------------------------------------------------------------------- 
- */
+
 @media only screen and (max-width:1024px) {
 	#resume .timeline-header {
 		padding-right: 50px;
@@ -1783,12 +1601,6 @@ header .logo a {
 }
 
 
-/** 
- * ===================================================================
- * 13. portfolio - (_layout.scss)
- *
- * ------------------------------------------------------------------- 
- */
 #portfolio {
 	background: #FFFFFF;
 	padding-top: 12rem;
@@ -1867,11 +1679,7 @@ header .logo a {
 	transform: scale(1.05);
 }
 
-/**
- * responsive:
- * portfolio
- * ------------------------------------------------------------------- 
- */
+
 @media only screen and (max-width:1024px) {
 	#portfolio .folio-title {
 		font-size: 3.1rem;
@@ -1888,10 +1696,7 @@ header .logo a {
 	}
 }
 
-/**
- * Popup Modal - (_layout.scss)
- * ------------------------------------------------------------------
- */
+
 .popup-modal {
 	max-width: 550px;
 	background: #FFFFFF;
@@ -1966,10 +1771,7 @@ header .logo a {
 	}
 }
 
-/**
- * transition effect for modal popup - (_layout.scss)
- * ------------------------------------------------------------------ 
- */
+
 
 /* overlay at start */
 .mfp-fade.mfp-bg {
@@ -2020,12 +1822,7 @@ header .logo a {
 	transform: translateY(-100%);
 }
 
-/** 
- * ===================================================================
- * 14. call-to-action section - (_layout.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 #cta {
 	padding-top: 10.2rem;
 	padding-bottom: 9rem;
@@ -2047,10 +1844,7 @@ header .logo a {
 	border-radius: 50%;
 }
 
-/**
- * section ads - (_layout.scss)
- * ------------------------------------------------------------------- 
- */
+
 .section-ads h2 {
 	position: relative;
 	padding-bottom: 2.1rem;
@@ -2073,11 +1867,7 @@ header .logo a {
 	color: #3F0D39;
 }
 
-/**
- * responsive:
- * cta
- * -------------------------------------------------------------------
- */
+
 @media only screen and (max-width:650px) {
 	.cta-content {
 		max-width: 650px;
@@ -2088,12 +1878,7 @@ header .logo a {
 }
 
 
-/** 
- * ===================================================================
- * 15. services - (_layout.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 #services {
 	background: #313131 url(../images/bg.jpg) no-repeat center;
 	-webkit-background-size: cover;
@@ -2214,11 +1999,7 @@ header .logo a {
 	color: rgba(255, 255, 255, 0.5);
 }
 
-/**
- * responsive:
- * stats
- * -------------------------------------------------------------------
- */
+
 @media only screen and (max-width:1024px) {
 	#stats .stat:nth-child(n) {
 		border-left: 1px solid rgba(255, 255, 255, 0.12);
@@ -2243,12 +2024,7 @@ header .logo a {
 }
 
 
-/** 
- * ===================================================================
- * 17. contact - (_layout.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 #contact {
 	background: #151515;
 	padding-top: 12rem;
@@ -2428,10 +2204,7 @@ header .logo a {
 	color: #FF0077;
 }
 
-/**
- * loader animation - (_layout.scss)
- * --------------------------------------------------------------- 
- */
+
 .s-loader {
 	margin: 1.2rem auto 3rem;
 	width: 70px;
@@ -2484,12 +2257,7 @@ header .logo a {
 }
 
 
-/** 
- * ===================================================================
- * 18. footer - (_layout.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 footer {
 	padding-bottom: 3rem;
 	font-size: 1.4rem;
@@ -2536,11 +2304,7 @@ footer .copyright span:last-child::after {
 	display: none;
 }
 
-/**
- * responsive:
- * footer
- * -------------------------------------------------------------------
- */
+
 @media only screen and (max-width:768px) {
 	footer {
 		text-align: center;
@@ -2559,10 +2323,7 @@ footer .copyright span:last-child::after {
 	}
 }
 
-/**
- * go to top - (_layout.scss)
- * ------------------------------------------------------------------- 
- */
+
 #go-top {
 	position: fixed;
 	bottom: 0;
@@ -2595,5 +2356,3 @@ footer .copyright span:last-child::after {
 #go-top a:hover {
 	background: #000000;
 }
-
-/*# sourceMappingURL=main.css.map */
