--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ a, a:visited {
 	transition: all 0.3s ease-in-out;
 }
 a:hover, a:focus, a:active {
-	color: #FF0077;
+	color: #8499B1;
 	outline: 0;
 }
 
@@ -250,7 +250,7 @@ ul.disc li::before {
 	width: 8px;
 	height: 8px;
 	border-radius: 50%;
-	background: #FF0077;
+	background: #8499B1;
 	position: absolute;
 	left: -17px;
 	top: 11px;
@@ -258,7 +258,7 @@ ul.disc li::before {
 }
 dt {
 	margin: 0;
-	color: #FF0077;
+	color: #8499B1;
 }
 dd {
 	margin: 0 0 0 2rem;
@@ -362,7 +362,7 @@ img.pull-left {
 	display: none;
 }
 .pace .pace-progress {
-	background: #FF0077;
+	background: #8499B1;
 	position: fixed;
 	z-index: 900;
 	top: 0;
@@ -400,7 +400,7 @@ img.pull-left {
 	border-top: 11px solid rgba(255, 255, 255, 0.1);
 	border-right: 11px solid rgba(255, 255, 255, 0.1);
 	border-bottom: 11px solid rgba(255, 255, 255, 0.1);
-	border-left: 11px solid #FF0077;
+	border-left: 11px solid #8499B1;
 	-webkit-animation: load 1.1s infinite linear;
 	animation: load 1.1s infinite linear;
 	display: block;
@@ -517,8 +517,8 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-	color: #cc005f;
-	border-bottom: 1px solid #FF0077;
+	color: #8499B1;
+	border-bottom: 1px solid #8499B1;
 }
 label, legend {
 	font-family: "poppins-bold", sans-serif;
@@ -651,8 +651,8 @@ button.stroke.large, .button.stroke.large {
 	line-height: 5.4rem !important;
 }
 button.stroke:hover, .button.stroke:hover {
-	border: 3px solid #FF0077;
-	color: #FF0077;
+	border: 3px solid #8499B1;
+	color: #8499B1;
 }
 button::-moz-focus-inner, input::-moz-focus-inner {
 	border: 0;
@@ -797,7 +797,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: #252525;
 }
 .stats-tabs li a:hover {
-	color: #FF0077;
+	color: #8499B1;
 }
 .stats-tabs li a em {
 	display: block;
@@ -904,7 +904,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	margin-bottom: 1.2rem;
 }
 .section-intro h5 {
-	color: #FF0077;
+	color: #8499B1;
 	font-size: 1.6rem;
 	line-height: 1.875;
 	margin-bottom: 0.3rem;
@@ -988,7 +988,7 @@ header .logo a {
 }
 .menu-toggle span {
 	display: block;
-	background-color: #FF0077;
+	background-color: #8499B1;
 	width: 24px;
 	height: 3px;
 	margin-top: -1.5px;
@@ -1046,7 +1046,7 @@ header .logo a {
 	background-color: rgba(255, 0, 119, 0);
 }
 .menu-toggle.is-clicked span::before, .menu-toggle.is-clicked span::after {
-	background-color: #ff0077;
+	background-color: #8499B1;
 	-moz-transition-delay: 0s, 0.2s;
 	-o-transition-delay: 0s, 0.2s;
 	-webkit-transition-delay: 0s, 0.2s;
@@ -1102,12 +1102,12 @@ header .logo a {
 	border: none;
 }
 .main-navigation li a:hover {
-	color: #FF0077;
+	color: #8499B1;
 	padding-left: 1rem;
 }
 .main-navigation li.current > a {
 	background: none;
-	color: #FF0077;
+	color: #8499B1;
 }
 
 
@@ -1177,7 +1177,7 @@ header .logo a {
 	text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .intro-content h5 {
-	color: #cc005f;
+	color: #8499B1;
 	font-family: "poppins-bold", sans-serif;
 	font-size: 2.3rem;
 	line-height: 1.565;
@@ -1224,7 +1224,7 @@ header .logo a {
 	letter-spacing: .25rem;
 }
 .intro-content .button:hover, .intro-content .button:focus {
-	border-color: #cc005f;
+	border-color: #8499B1;
 }
 .intro-content .button::after {
 	display: inline-block;
@@ -1256,7 +1256,7 @@ header .logo a {
 	color: #FFFFFF;
 }
 .intro-social li a:hover, .intro-social li a:focus {
-	color: #cc005f;
+	color: #8499B1;
 }
 
 
@@ -1451,7 +1451,7 @@ header .logo a {
 	text-align: center;
 }
 #resume .resume-header h2 {
-	color: #FF0077;
+	color: #8499B1;
 }
 
 #resume .resume-timeline {
@@ -1761,7 +1761,7 @@ header .logo a {
 	border-right: 1px solid rgba(200, 200, 200, 0.1);
 }
 .popup-modal .link-box a:hover {
-	background: #cc005f;
+	background: #8499B1;
 	border: none;
 }
 @media only screen and (max-width:600px) {
@@ -1907,7 +1907,7 @@ header .logo a {
 	color: white;
 }
 #services .section-intro h5 {
-	color: #FF0077;
+	color: #8499B1;
 }
 #services .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -1929,7 +1929,7 @@ header .logo a {
 }
 .services-list .icon i {
 	font-size: 5.4rem;
-	color: #FF0077;
+	color: #8499B1;
 }
 .services-list h3 {
 	color: #FFFFFF;
@@ -1957,18 +1957,13 @@ header .logo a {
 	background: #FFFFFF;
 }
 .owl-theme .owl-controls .owl-page.active span {
-	background: #FF0077;
+	background: #8499B1;
 }
 
 
-/** 
- * ===================================================================
- * 16. stats - (_layout.scss)
- *
- * ------------------------------------------------------------------- 
- */
+
 #stats {
-	background: #990047;
+	background: #A5C4D4;
 	padding-top: 7.2rem;
 	padding-bottom: 6rem;
 	text-align: center;
@@ -2034,7 +2029,7 @@ header .logo a {
 	color: white;
 }
 #contact .section-intro h5 {
-	color: #FF0077;
+	color: #8499B1;
 }
 #contact .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2087,7 +2082,7 @@ header .logo a {
 	padding: 0 2rem;
 	margin: 0;
 	color: #FFFFFF;
-	background: #FF0077;
+	background: #8499B1;
 }
 #contact form .form-field label::after {
 	position: absolute;
@@ -2096,7 +2091,7 @@ header .logo a {
 	margin-top: -6px;
 	border-top: 5px solid transparent;
 	border-bottom: 5px solid transparent;
-	border-right: 5px solid #FF0077;
+	border-right: 5px solid #8499B1;
 	content: "";
 }
 #contact input[type="text"],
@@ -2118,7 +2113,7 @@ header .logo a {
 #contact input[type="text"]:focus,
 #contact input[type="password"]:focus,
 #contact input[type="email"]:focus {
-	border-color: #FF0077;
+	border-color: #8499B1;
 	color: #FFFFFF;
 }
 #contact textarea {
@@ -2126,7 +2121,7 @@ header .logo a {
 	padding: 1.8rem 2rem;
 }
 #contact textarea:focus {
-	border-color: #FF0077;
+	border-color: #8499B1;
 	color: #FFFFFF;
 }
 #contact button.submitform {
@@ -2138,11 +2133,11 @@ header .logo a {
 	padding: 0 3rem;
 	margin-top: 4.8rem;
 	width: 100%;
-	background: #FF0077;
+	background: #8499B1;
 	color: #FFFFFF;
 }
 #contact button.submitform:hover, #contact button.submitform:focus {
-	background: #cc005f;
+	background: #8499B1;
 }
 #message-warning, #message-success {
 	display: none;
@@ -2156,7 +2151,7 @@ header .logo a {
 	color: #fa0003;
 }
 #message-success {
-	color: #FF0077;
+	color: #8499B1;
 }
 #message-warning i, #message-success i {
 	margin-right: 10px;
@@ -2201,7 +2196,7 @@ header .logo a {
 	color: #FFFFFF;
 }
 .contact-info h5 {
-	color: #FF0077;
+	color: #8499B1;
 }
 
 
@@ -2267,7 +2262,7 @@ footer a, footer a:visited {
 	color: #FFFFFF;
 }
 footer a:hover, footer a:focus {
-	color: #FF0077;
+	color: #8499B1;
 }
 footer .row {
 	max-width: 900px;
@@ -2339,7 +2334,7 @@ footer .copyright span:last-child::after {
 	width: 6rem;
 	line-height: 6.6rem;
 	text-align: center;
-	background: #cc005f;
+	background: #8499B1;
 	color: #FFFFFF;
 	text-align: center;
 	text-transform: uppercase;
