--- a/css/main.css
+++ b/css/main.css
@@ -1334,16 +1334,10 @@ header .logo a {
 	margin-right: -30px;
 	margin-left: -30px;
 }
-.intro-info img {
-	height: 9rem;
-	width: 9rem;
-	border-radius: 50%;
-	margin: .9rem 0 0 0;
-	float: left;
-}
+
+
 .intro-info .lead {
-	text-align: left;
-	padding-left: 13rem;
+	text-align: center;
 }
 
 .about-content {
