--- a/css/main.css
+++ b/css/main.css
@@ -1874,7 +1874,7 @@ header .logo a {
 
 
 #services {
-	background: #313131 url(../images/bg.jpg) no-repeat center;
+	background: #5a738e url(../images/bg.png) repeat center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -1889,7 +1889,7 @@ header .logo a {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #151515;
+	background: #37393A;
 	opacity: .9;
 }
 
